--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,18 @@ log = "0.4"
 
 # You only need serde if you want app persistence:
 serde = { version = "1", features = ["derive"] }
+web-sys = { version = "0.3.69", features = [
+    "Navigator",
+    "Permissions",
+    "MediaDevices",
+    "MediaStreamConstraints",
+    "Blob",
+    "AudioContext",
+    "MediaStream",
+    "MediaStreamAudioSourceNode",
+    "AnalyserNode",
+    "console",
+] }
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
