--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ web-sys = { version = "0.3.69", features = [
     "AnalyserNode",
     "console",
 ] }
+wasm-bindgen = "0.2.92"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
