--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ log = "0.4"
 
 # You only need serde if you want app persistence:
 serde = { version = "1", features = ["derive"] }
+serde-wasm-bindgen = "0.4"
 web-sys = { version = "0.3.69", features = [
     "Navigator",
     "Permissions",
@@ -33,8 +34,16 @@ web-sys = { version = "0.3.69", features = [
     "MediaStreamAudioSourceNode",
     "AnalyserNode",
     "console",
+    "IdbFactory",
+    "IdbOpenDbRequest",
+    "IdbRequest",
+    "IdbDatabase",
+    "IdbTransaction",
+    "IdbTransactionMode",
+    "IdbObjectStore",
 ] }
 wasm-bindgen = "0.2.92"
+js-sys = "0.3.69"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
