--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ web-sys = { version = "0.3.69", features = [
     "IdbTransaction",
     "IdbTransactionMode",
     "IdbObjectStore",
+    "DomException",
 ] }
 wasm-bindgen = "0.2.92"
 js-sys = "0.3.69"
