--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 
 [dependencies]
 egui = "0.28"
-eframe = { version = "0.28", default-features = false, features = [
+eframe = { version = "0.28.0", default-features = false, features = [
     "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
     "default_fonts", # Embed the default egui fonts.
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
@@ -22,12 +22,14 @@ log = "0.4"
 
 # You only need serde if you want app persistence:
 serde = { version = "1", features = ["derive"] }
-serde-wasm-bindgen = "0.4"
-web-sys = { version = "0.3.69", features = [
+serde-wasm-bindgen = "0.6"
+web-sys = { version = "=0.3.69", features = [
     "AnalyserNode",
     "AudioBuffer",
-    "AudioContext",
     "AudioBufferSourceNode",
+    "AudioContext",
+    "AudioContextOptions",
+    "AudioParam",
     "Blob",
     "DomException",
     "IdbDatabase",
@@ -42,6 +44,8 @@ web-sys = { version = "0.3.69", features = [
     "MediaStreamAudioSourceNode",
     "MediaStreamConstraints",
     "Navigator",
+    "OscillatorNode",
+    "OscillatorType",
     "Permissions",
     "console",
 ] }
@@ -58,7 +62,7 @@ wasm-bindgen-futures = "0.4"
 
 # to access the DOM (to hide the loading text)
 [target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
-version = "0.3.4"
+version = "=0.3.69"
 
 [profile.release]
 opt-level = 2 # fast and small wasm
